# TurboVision-dialog-designer

./: !DELETE.cmd  .gitignore  CMakeLists.txt  README.md  TurboVision dialog designer.md  common.h  main.cpp  mingw.cmd  msvc.cmd  msvc_eng.cmd  msvc_ru.cmd  multilang.h  tbuttonproperties.cpp  tcheckboxesproperties.cpp  tcolorfield.cpp  tcolorfield.h  tcomponentdialog.cpp  tcomponentdialog.h  tcustomdialog.cpp  tdialogdesigner.h  tinputlineproperties.cpp  tinputlineproperties.h  tlistboxproperties.cpp  tprg.cpp  tprg.h  tradiobuttonproperties.h  trialdialog.cpp  trialdialog.h  tselectcolordialog.cpp  tstatictextproperties.cpp  tstatictextproperties.h  ttrialbutton.cpp  ttrialcheckboxes.h  ttrialdialogbackground.h  ttrialinputline.cpp  ttrialinputline.h  ttriallistbox.h  ttrialstatictext.cpp  ttrialstatictext.h  tvdd.sln  (+4 more)
dialogs/: 1.dlg  111.cpp  222.json  TCheckBoxes_Properties.json  TCheckBoxes_Property.dlg  TDialog_Properties.dlg  TDialog_Properties.json
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
rework/: wbutton.h  wcheckboxes.h  wlistbox.h  wmemo.h  wradiobuttons.cpp  wstatictext.cpp  wstatictext.h
tvdd/: 111.json  CMakeLists.txt  common.cpp  common.h  multilang.h  tbuttonproperties.cpp  tbuttonproperties.h  tcheckboxesproperties.cpp  tcheckboxesproperties.h  tcolorfield.cpp  tcolorfield.h  tcomponentdialog.cpp  tcomponentdialog.h  tcustomdialog.cpp  tcustomdialog.h  tcustomwindow.cpp  tcustomwindow.h  tdialogdesigner.cpp  tdialogproperties.cpp  tdialogproperties.h  textinputdouble.cpp  textinputline.cpp  textinputlong.cpp  textrainput.cpp  textrainput.h  tinputdoubleproperties.cpp  tinputdoubleproperties.h  tinputlineproperties.cpp  tinputlineproperties.h  tinputlongproperties.cpp  tinputlongproperties.h  tlistboxproperties.cpp  tlistboxproperties.h  tmemoproperties.cpp  tmemoproperties.h  tprg.cpp  tprg.h  tradiobuttonproperties.cpp  tradiobuttonproperties.h  trialdialog.cpp  (+48 more)
tvdd/include/tvision/: app.h  buffers.h  colorsel.h  dialogs.h  drawbuf.h  editors.h  hardware.h  menus.h  msgbox.h  objects.h  outline.h  resource.h  stddlg.h  system.h  textview.h  tkeys.h  tobjstrm.h  ttypes.h  tv.h  tvobjs.h  util.h  validate.h  views.h
tvdd/include/tvision/compat/: dos.h  iosfwd.h  mem.h
tvdd/include/tvision/compat/borland/: dir.h
